Increasing text size in buttons

--- a/Cordova Workshop/www/index.html
+++ b/Cordova Workshop/www/index.html
@@ -30,7 +30,7 @@
         
         <div class="container">
             <div class="buttonContainer">
-                <div id="takePhoto" class="button"> Take a picture </div>
+                <div id="takePhoto" class="button"> <p>Take a picture</p> </div>
                 <div class="button"> 
                     <div class="batteryContainer">
                         <div class="batteryTop"></div>
@@ -41,7 +41,7 @@
                     <div class="playControl" style="display:block"></div>
                     <div class="pauseControl"><span class="pauseControl-mid"></span></div>
                 </div>
-                <div id="instagram" class="button"> Open Instagram </div>
+                <div id="instagram" class="button"><p> Open Instagram </p></div>
             </div>
         </div>
         <div class="app">
